--- a/CSS/styleForget.css
+++ b/CSS/styleForget.css
@@ -1,4 +1,5 @@
-body{
+body
+{
 	background: url(IMGS/progressBarImg4.jpg);
 }
 @media screen and (min-width: 762px)
@@ -11,7 +12,7 @@ body{
 		height: 600px;
 		width: 600px !important;
 		margin-top: 150px;
-		margin-left: 670px;
+		margin-left: 35%;
 		text-align: center;
 	}
 	input
@@ -23,6 +24,30 @@ body{
 		height: 40px;
 		margin-top: 5%;
 	}
+}
+@media screen and (min-width: 762px) and (max-width: 1200px)
+{
+	#forgetBox
+	{
+		border: 1px solid rgba(0,0,0,0.6);
+		background: rgba(35,38,38,0.4);
+		border-radius: 50%;
+		height: 600px;
+		width: 600px !important;
+		margin-top: 100px;
+		margin-left: 30%;
+		text-align: center;
+	}
+	input
+	{
+		background-color: #fff;
+		border-radius: 7px;
+		box-shadow: 4px 4px 4px rgba(0,0,0,0.5);
+		width: 300px;
+		height: 40px;
+		margin-top: 5%;
+	}
+
 }
 
 #forgetBox
@@ -48,7 +73,7 @@ h2
 }
 .username
 {
-	margin-top: 40%;
+	margin-top: 7%;
 }
 .submitBtn
 {
@@ -57,6 +82,13 @@ h2
 	padding: 5px 5px 5px 5px;
 	box-shadow: 4px 4px 4px rgba(0,0,0,0.5);
 }
+.titre
+	{
+		color: white;
+		font-size: 300%;
+		margin-left: 10px !important;
+		margin-top: 140px !important;
+	}
 .navbar
 {
     background: rgba(0,0,0, 0.7);
