--- a/CSS/styleRegister.css
+++ b/CSS/styleRegister.css
@@ -1,31 +1,51 @@
 body{
     background: url(IMGS/progressBarImg4.jpg);
 }
-@media screen and (min-width: 762px) {
-    #loginBox
-    {
-        border: 1px solid rgba(0,0,0,0.6);
-        background: rgba(35,38,38,0.4);
-        border-radius: 50%;
-        height: 600px;
-        width: 600px !important;
-        margin-top: 150px;
-        margin-left: 35%;
-        text-align: center;
-    }
-    input
-    {
-        background-color: #fff;
-        border-radius: 7px;
-        box-shadow: 4px 4px 4px rgba(0,0,0,0.5);
-        width: 300px;
-        height: 40px;
-        margin-top: 5%;
-    }
-    .username
-    {
-        margin-top: 35% !important;
-    }
+@media screen and (min-width: 762px)
+{
+	#loginBox
+	{
+		border: 1px solid rgba(0,0,0,0.6);
+		background: rgba(35,38,38,0.4);
+		border-radius: 50%;
+		height: 600px;
+		width: 600px !important;
+		margin-top: 150px;
+		margin-left: 35%;
+		text-align: center;
+	}
+	input
+	{
+		background-color: #fff;
+		border-radius: 7px;
+		box-shadow: 4px 4px 4px rgba(0,0,0,0.5);
+		width: 300px;
+		height: 40px;
+		margin-top: 5%;
+	}
+}
+@media screen and (min-width: 762px) and (max-width: 1200px)
+{
+	#loginBox
+	{
+		border: 1px solid rgba(0,0,0,0.6);
+		background: rgba(35,38,38,0.4);
+		border-radius: 50%;
+		height: 600px;
+		width: 600px !important;
+		margin-top: 100px;
+		margin-left: 30%;
+		text-align: center;
+	}
+	input
+	{
+		background-color: #fff;
+		border-radius: 7px;
+		box-shadow: 4px 4px 4px rgba(0,0,0,0.5);
+		width: 300px;
+		height: 40px;
+		margin-top: 5%;
+	}
 }
 #loginBox
 {
@@ -50,15 +70,22 @@ h2
 }
 .username
 {
-    margin-top: 45%;
+	margin-top: 7%;
 }
 .submitBtn
 {
-    margin-top: 20px;
-    width: 120px;
-    padding: 5px 5px 5px 5px;
-    box-shadow: 4px 4px 4px rgba(0,0,0,0.5);
+	margin-top: 20px;
+	width: 120px;
+	padding: 5px 5px 5px 5px;
+	box-shadow: 4px 4px 4px rgba(0,0,0,0.5);
 }
+.titre
+	{
+		color: white;
+		font-size: 500%;
+		margin-left: 10px !important;
+		margin-top: 110px !important;
+	}
 .navbar
 {
     background: rgba(0,0,0, 0.7);
